# handover-toolkit

./: .gitignore  README.md  bbox.py  infer_hand.py  k4a_0_000696700112.json  requirements.txt  vitpose_model.py
data/: README.md
poem/: README.md  flip_util.py
poem/models/: PETR.py  POEM.py  darkpose.py
poem/models/backbones/: hrnet.py
poem/models/bricks/: point_transformers.py  transformer.py
poem/models/heads/: petr_FTL_head.py
poem/models/layers/: mvp_decoder.py  ptEmb_transformer.py
poem/utils/: config.py  recorder.py  testing.py
poem/video_tool/: ffmpeg_util.py
poem/viztools/: utils.py  viz_o3d_utils.py
src/capture/: CMakeLists.txt  README.md  main.cpp
src/keypoints/adapters/: mediapipe.py
src/viz/: test.py
tools/calibration/: calib.py  utils.py  validate.py  visualize.py
tools/capture/: CMakeLists.txt  README.md  main.cpp  recorder.h
tools/mkv/: metadata.py  split.py
